# xuolauncher

./: .gitignore  Cargo.toml  README.md  build_linux.sh  xuo.pro
.github/workflows/: build.yml
build_linux/src/launcher/: qrc_res.cpp  ui_changelogform.h  ui_launcherwindow.h  xuolauncher
build_linux/src/manager/: xuomanager
rust_launcher/: Cargo.toml
rust_launcher/src/: app.rs  main.rs  message.rs
rust_launcher/src/core/: app.rs  config.rs  launch.rs  message.rs
rust_launcher/src/data/: config.rs  model.rs
rust_launcher/src/gui/: mod.rs  style.rs  view.rs
rust_launcher/src/logic/: installer.rs  launch.rs
src/: main.rs
src/common/resources/: res.qrc
src/common/updater/: qzipreader_p.h  qzipwriter_p.h  updateinfo.h  updatemanager.cpp  updatemanager.h  updater.pri  xxhash.cpp
src/core/: app.rs  installer.rs  launcher.rs  launcher_installer.rs  manifest.rs  message.rs  mod.rs  self_update.rs  state.rs  verifier.rs
src/gui/: mod.rs  style.rs  theme.rs  view.rs
src/gui/screens/: dashboard.rs  mod.rs  patcher.rs
src/launcher/: changelogform.cpp  changelogform.h  launcher.pro  launcher.rc  launcherwindow.cpp  launcherwindow.h  launcherwindow.ui  main.cpp  proxylistitem.cpp  proxylistitem.h  serverlistitem.cpp  serverlistitem.h
src/manager/: manager.cpp  manager.pro  managerwindow.cpp  managerwindow.h  managerwindow.ui
src/net/: downloader.rs  mod.rs
